kubernetes/kafka/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: infra
  labels:
    app: kafka-ui
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:v0.4.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
  selector:
    matchLabels:
      app: kafka-ui
