kubernetes/kafka/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka-ui
  namespace: infra
spec:
  hosts:
    - "infra.backend.com"
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: /kafka-ui/
      route:
        - destination:
            host: kafka-ui
            port:
              number: 9021
